polychem/src/snapshots/polychem__composition_parser__tests__chemical_composition-11.snap
---
source: polychem/src/composition_parser.rs
expression: "(chemical_formula, particle_offset)"
---
(
    [
        (
            "Nitrogen",
            1,
        ),
        (
            "Hydrogen",
            2,
        ),
        (
            "Technetium-99",
            1,
        ),
    ],
    None,
)
