polychem/src/snapshots/polychem__composition_parser__tests__chemical_composition-12.snap
---
source: polychem/src/composition_parser.rs
expression: "(chemical_formula, charged_particles)"
---
(
    [
        (
            "Chlorine-37",
            5,
        ),
    ],
    [
        (
            Remove,
            2,
            "Proton",
        ),
    ],
)
