polychem/src/snapshots/polychem__composition_parser__tests__chemical_composition-15.snap
---
source: polychem/src/composition_parser.rs
expression: "(chemical_formula, charged_particles)"
---
(
    [
        (
            "Carbon",
            11,
        ),
        (
            "Hydrogen",
            12,
        ),
        (
            "Nitrogen",
            2,
        ),
        (
            "Oxygen",
            2,
        ),
    ],
    [],
)
