polychem/src/snapshots/polychem__composition_parser__tests__chemical_composition-2.snap
---
source: polychem/src/composition_parser.rs
expression: "(chemical_formula, particle_offset)"
---
(
    [
        (
            "Carbon",
            11,
        ),
        (
            "Hydrogen",
            12,
        ),
        (
            "Nitrogen",
            2,
        ),
        (
            "Oxygen",
            2,
        ),
    ],
    None,
)
