polychem/src/snapshots/polychem__composition_parser__tests__chemical_composition-3.snap
---
source: polychem/src/composition_parser.rs
expression: "(chemical_formula, particle_offset)"
---
(
    [
        (
            "Oxygen",
            1,
        ),
        (
            "Hydrogen",
            1,
        ),
    ],
    Some(
        (
            Add,
            1,
            "Electron",
        ),
    ),
)
