polychem/src/snapshots/polychem__composition_parser__tests__chemical_composition-4.snap
---
source: polychem/src/composition_parser.rs
expression: "(chemical_formula, charged_particles)"
---
(
    [
        (
            "Sodium",
            1,
        ),
    ],
    [
        (
            Remove,
            1,
            "Electron",
        ),
    ],
)
