polychem/src/snapshots/polychem__composition_parser__tests__chemical_composition-6.snap
---
source: polychem/src/composition_parser.rs
expression: "(chemical_formula, charged_particles)"
---
(
    [
        (
            "Chromium",
            2,
        ),
        (
            "Oxygen",
            7,
        ),
    ],
    [
        (
            Add,
            2,
            "Electron",
        ),
    ],
)
