polychem/src/snapshots/polychem__composition_parser__tests__chemical_composition-8.snap
---
source: polychem/src/composition_parser.rs
expression: "(chemical_formula, particle_offset)"
---
(
    [
        (
            "Deuterium",
            2,
        ),
        (
            "Oxygen",
            1,
        ),
    ],
    None,
)
